src/objects/Open_Contract_OPS__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Party Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Open_Contracts_OPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPS_Party_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OPS Party Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ord_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ord No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ord_Qty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ord. Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRICE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pend_Qty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pend. Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_UOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Month__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Qty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipped Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Open Contract (Dairy)</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Open Contract OPS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Contracts (Dairy)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>